feature(general):Update features

--- a/src/app/data/languages/translations.json
+++ b/src/app/data/languages/translations.json
@@ -4,6 +4,8 @@
     "Log In": "Ingia",
     "Sign Up": "Jiandikishe",
     "Fast online trading":"Uuzaji haraka mtandaoni",
-    "Try free demo":"Jaribu demo ya bure"
+    "Try free demo":"Jaribu demo ya bure",
+    "Analytics":"Uchambuzi",
+    "Help":"Msaada"
   }
 }
